@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: fa65a5cf4fcf0ee39fb56c66b753327f)
+# DO NOT EDIT (digest: 06e9d7768c0c32cc375df6aa519bd093)
 # Ignore VCS directories, you can use the same kind of rule outside 
 # OASIS_START/STOP if you want to exclude directories that contains 
 # useless stuff for the build process
@@ -15,11 +15,17 @@
 "_darcs": not_hygienic
 # Library pcf
 "lib/pcf.cmxs": use_pcf
+# Library pcf_unix
+"lib/pcf_unix.cmxs": use_pcf_unix
+<lib/*.ml{,i}>: use_pcf
+<lib/*.ml{,i}>: pkg_unix
 <lib/*.ml{,i}>: pkg_cstruct
 # Executable dump
+<dump/dump.{native,byte}>: use_pcf_unix
 <dump/dump.{native,byte}>: use_pcf
 <dump/dump.{native,byte}>: pkg_unix
 <dump/dump.{native,byte}>: pkg_cstruct
+<dump/*.ml{,i}>: use_pcf_unix
 <dump/*.ml{,i}>: use_pcf
 <dump/*.ml{,i}>: pkg_unix
 <dump/*.ml{,i}>: pkg_cstruct
