@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.3.0 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 912b806964ac3fe44c8e0afcc688f736) *)
+(* DO NOT EDIT (digest: 3f9e9b694e346b091b633152f77f4a14) *)
 (*
    Regenerated by OASIS v0.3.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5661,6 +5661,38 @@ let setup_t =
                       lib_findlib_name = Some "pcf";
                       lib_findlib_containers = [];
                       });
+               Library
+                 ({
+                     cs_name = "pcf_unix";
+                     cs_data = PropList.Data.create ();
+                     cs_plugin_data = [];
+                     },
+                   {
+                      bs_build = [(OASISExpr.EBool true, true)];
+                      bs_install = [(OASISExpr.EBool true, true)];
+                      bs_path = "lib";
+                      bs_compiled_object = Best;
+                      bs_build_depends =
+                        [FindlibPackage ("unix", None); InternalLibrary "pcf"
+                        ];
+                      bs_build_tools = [ExternalTool "ocamlbuild"];
+                      bs_c_sources = [];
+                      bs_data_files = [];
+                      bs_ccopt = [(OASISExpr.EBool true, [])];
+                      bs_cclib = [(OASISExpr.EBool true, [])];
+                      bs_dlllib = [(OASISExpr.EBool true, [])];
+                      bs_dllpath = [(OASISExpr.EBool true, [])];
+                      bs_byteopt = [(OASISExpr.EBool true, [])];
+                      bs_nativeopt = [(OASISExpr.EBool true, [])];
+                      },
+                   {
+                      lib_modules = ["Pcf_unix"];
+                      lib_pack = false;
+                      lib_internal_modules = [];
+                      lib_findlib_parent = Some "pcf";
+                      lib_findlib_name = Some "unix";
+                      lib_findlib_containers = [];
+                      });
                Executable
                  ({
                      cs_name = "dump";
@@ -5673,8 +5705,7 @@ let setup_t =
                       bs_path = "dump";
                       bs_compiled_object = Best;
                       bs_build_depends =
-                        [InternalLibrary "pcf"; FindlibPackage ("unix", None)
-                        ];
+                        [InternalLibrary "pcf"; InternalLibrary "pcf_unix"];
                       bs_build_tools = [ExternalTool "ocamlbuild"];
                       bs_c_sources = [];
                       bs_data_files = [];
@@ -5694,7 +5725,7 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0";
-     oasis_digest = Some "\247`\143!+\001\245>e\\\225\153\158\151\138\248";
+     oasis_digest = Some "\187\127\212\224\148Cc\175\165\002\t\018?S\244\135";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -5702,6 +5733,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 5706 "setup.ml"
+# 5737 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
