@@ -3,3 +3,4 @@
 * Now able to extract glyphs from 8x16.pcf
 * Now able to look up glyphs from encodings within 8x16.pcf
 * Now able to extract font-global accelerator information
+* Add sub-package pcf.unix which can open files on Unix
